plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
